--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "strapi-provider-translate-ai",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "AI provider for translate plugin in Strapi 4",
   "keywords": [
     "strapi",
@@ -14,7 +14,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/givebest/strapi-plugin-translate-ai.git"
+    "url": "git+https://github.com/givebest/strapi-plugin-translate-ai.git"
   },
   "license": "MIT",
   "author": {
@@ -31,9 +31,6 @@
   "main": "./lib",
   "directories": {
     "lib": "./lib"
-  },
-  "scripts": {
-    "test": "jest"
   },
   "dependencies": {
     "bottleneck": "^2.19.5"
